welcome.lessons.welcome.loopdowhile.Poucet2.scala.error
Poucet:7: error: forward reference extends over definition of variable NbBiscuit
  NbBiscuit = NbBiscuit + 1
  ^